--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .root {
   display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(4, 100px);
-  grid-auto-rows: 100px;
+  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: 100px;
+  grid-auto-rows: 200px;
   padding: 20px;
-  background: white;
 }
